fix wrong width

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -3,9 +3,6 @@
     padding: 0;
 }
 
-body {
-    min-width: 1000px;
-}
 
 a {
     text-decoration: none;
